RESOLVED FIXED184889
WebProcessProxy frequently re-takes a process assertion for the network process even though is already has one
https://bugs.webkit.org/show_bug.cgi?id=184889
Summary WebProcessProxy frequently re-takes a process assertion for the network proce...
Chris Dumez
Reported 2018-04-23 10:07:51 PDT
WebProcessProxy frequently re-takes a process assertion for the network process even though is already has one. This causes repeated logging such as: 2018-03-04 23:56:39.403025+0200 0xb6424 Default 0x0 8873 sup: (WebKit) [com.apple.WebKit.ProcessSuspension] 0x122bd3a80 - WebProcessProxy::didSetAssertionState(Foreground) taking foreground assertion for network process 2018-03-04 23:56:39.403028+0200 0xb6424 Default 0x0 8873 sup: (WebKit) [com.apple.WebKit.ProcessSuspension] 0x122bd3a80 - WebProcessProxy::didSetAssertionState(Foreground) taking foreground assertion for network process 2018-03-04 23:56:39.403028+0200 0xb6424 Default 0x0 8873 sup: (WebKit) [com.apple.WebKit.ProcessSuspension] 0x122bd3a80 - WebProcessProxy::didSetAssertionState(Foreground) taking foreground assertion for network process 2018-03-04 23:56:39.403029+0200 0xb6424 Default 0x0 8873 sup: (WebKit) [com.apple.WebKit.ProcessSuspension] 0x122bd3a80 - WebProcessProxy::didSetAssertionState(Foreground) taking foreground assertion for network process
Attachments
Patch (2.43 KB, patch)
2018-04-23 10:10 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-04-23 10:08:10 PDT
Chris Dumez
Comment 2 2018-04-23 10:10:47 PDT
WebKit Commit Bot
Comment 3 2018-04-23 13:29:42 PDT
Comment on attachment 338591 [details] Patch Clearing flags on attachment: 338591 Committed r230918: <https://trac.webkit.org/changeset/230918>
WebKit Commit Bot
Comment 4 2018-04-23 13:29:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.